Overflow problems fixed

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,10 @@
     margin: 0;
 }
 
+body {
+    overflow-y: hidden;
+}
+
 .useless-div {
     display: flex;
     justify-content: center;
@@ -18,6 +22,13 @@
     color: #fff;
     width: 50vw;
     height: 100vh;
+}
+
+.previewer {
+    width: 50vw;
+    height: 100vh;
+    overflow-y: scroll;
+    overflow-x: scroll;
 }
 
 header {
